--- a/zen_mockup.css
+++ b/zen_mockup.css
@@ -1,9 +1,3 @@
-/*notes
-Background - grey = EEEEEE
-Text and background - red = E23045
-Text - ivory = FFF6E0
-
-*/
 @import url(https://fonts.googleapis.com/css?family=Nova+Square);
 
 body {
@@ -11,12 +5,12 @@ body {
 	font-family: sans-serif;
 }
 
-.intro{
-	min-width: 475px;
-	font-weight: bold;
+header * {
+	margin: 15px 0;
 }
 
-.intro, a {
+.intro{
+	min-width: 475px;
 	color: #FFF6E0;
 }
 
@@ -26,19 +20,21 @@ body {
 	padding: 10px 5px;
 }
 
-a {
-	text-decoration: none;
-}
-
-article a, h1 {
-	color: #E23045;
-
-}
-
 .preamble {
 	background-color: #1B4549;
 	padding: 30px 10px;
 	margin: 15px 0 70px 0;
+}
+
+main article, .preamble {
+	box-shadow: 30px 40px #7AB3B0;
+	border-radius: 3px;
+}
+
+.main {
+	width: 65%;
+	display: inline-block;
+	min-width: 475px;
 }
 
 main article {
@@ -46,11 +42,6 @@ main article {
 	border: 1px solid #333333;
 	padding: 20px 20px;
 	margin: 10px 0;
-}
-
-main article, .preamble {
-	box-shadow: 30px 40px #7AB3B0;
-	border-radius: 3px;
 }
 
 .resources {
@@ -71,9 +62,6 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Nova Square', cursive;
 	margin: 0;
 }
-header * {
-	margin: 15px 0;
-}
 
 h1 {
 	font-size: 60px;
@@ -89,9 +77,17 @@ h3 {
 
 p {
 	font-size: 20px;
+	margin-bottom: 0;
 }
 
+a {
+	text-decoration: none;
+	color: #FFF6E0;
+}
 
+article a, h1 {
+	color: #E23045;
+}
 
 .page-wrapper {
 	padding: 50px 20px 50px 20px;
@@ -99,21 +95,11 @@ p {
 	margin: 0 auto;
 }
 
-.main {
-	width: 65%;
-	display: inline-block;
-	min-width: 475px;
-}
-
 .sidebar {
 	display: inline-block;
 	vertical-align: top;
 	width: 30%;
 	min-width: 250px
-}
-
-p {
-	margin-bottom: 0;
 }
 
 footer a {
